Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.4, 5.12.6, 5.15
-
-
a5e5943d8a7d2a1345dc94dad0a97cf2966f6e7b (qt/qtbase/dev) d786f9736b29bad3de0b422471bf85c2fa517731 (qt/qtbase/6.2)
Description
Mac sometimes get the hover/active state frozen and it won't be removed until the button gets activated and deactivated again. It can happen in many different situations, but having a QMenu on a toolbutton is the easiest way to reproduce.
To reproduce.
1) Run the attached example.
2) Move to the button that gets red (which it should)
3) Click the button and select an item.
4) The menu hides and the button should no longer be active/hovered (red)
It seems like the button doesn't get the leave event it should have and got in previous versions. The state only works correctly as long as the button is not clicked.
A build of dev (about 2 weeks old) also has this issue. It may be a QPA issue.
Attachments
Issue Links
- is duplicated by
-
QTBUG-44400 QPushButton remains in hover state after menu closed
-
- Closed
-
- relates to
-
QTBUG-36926 Mac OS: Mouse hover events are sometimes ignored
-
- Closed
-
-
QTBUG-97951 QFrame does not always refresh hover state when QComboBox is activated
-
- Closed
-
-
QTBUG-44400 QPushButton remains in hover state after menu closed
-
- Closed
-
- resulted in
-
QTBUG-128453 App stops receiving touch events if the popup is dismissed on MacOS
-
- Open
-
- mentioned in
-
Page Loading...